[project] Update README
 - include a real example

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,8 +22,9 @@ Provides lookup tables for use with alcohol attributable fractions analyses
 
 # Example
 
-This is a basic example which shows you how to solve a common problem:
-
 ```{r example}
-## basic example code
+## reconstruct current aaf lookup for hospital admissions
+
+t1 <- reconstruct("aaf_2017_phe", "morbidity")
+
 ```
