[project] Add install stanza to README.

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,5 @@
 ---
+#output: github_document
 output:
   md_document:
     variant: markdown_github
@@ -19,6 +20,16 @@ knitr::opts_chunk$set(
 Alcohol Attributable Fractions Lookup Tables
 
 Provides lookup tables for use with alcohol attributable fractions analyses
+
+## Installation
+
+You can install aafractions.ncc from github with:
+
+```{r gh-installation, eval = FALSE}
+# install.packages("devtools")
+devtools::install_github("ianbatesncc/aafractions.ncc")
+
+```
 
 # Example
 
