--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,9 @@
 ---
-#output: github_document
 output:
-  md_document:
-    variant: markdown_github
+    github_document
+#output:
+#  md_document:
+#    variant: markdown_github
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
