--- a/vignettes/counting_aa_events.Rmd
+++ b/vignettes/counting_aa_events.Rmd
@@ -56,13 +56,13 @@ For alcohol as a risk factor there are a number of conditions considered related
 c1 <- aafractions.ncc::aa_conditions %>%
     merge(
         aafractions.ncc::aa_versions %>% 
-            filter(Version == "aaf_2017_phe")
+            filter(version == "aaf_2017_phe")
         , by = "condition_uid"
     ) %>%
     select(-cat2, -attribution, -cause) %>%
     sample_n(6) %>%
     arrange(condition_uid) %>%
-    select_at(vars("desc", "cat1", "condition_uid", "Version"))
+    select_at(vars("desc", "cat1", "condition_uid", "version"))
 
     knitr::kable(c1) %>%
     kableExtra::kable_styling(bootstrap_options = "condensed", font_size = 12)
@@ -78,14 +78,14 @@ The strength of the alcohol attribution for each condition differs by age and ge
 ##### Table: Alcohol Attributable Fractions
 ```{r echo = FALSE}
 aafractions.ncc::aa_fractions %>%
-    filter(Version == "aaf_2017_phe", condition_uid == max(c1$condition_uid)) %>% 
+    filter(version == "aaf_2017_phe", condition_uid == max(c1$condition_uid)) %>% 
     dcast(... ~ aa_ageband, value.var = "aaf", fun = sum) %>% 
     merge(aafractions.ncc::aa_conditions %>% select(condition_uid, desc)) %>% 
     arrange(analysis_type) %>%
     select_at(vars(
         c("desc", "analysis_type", "sex")
         , ends_with("Yrs")
-        , c("condition_uid", "Version"))
+        , c("condition_uid", "version"))
     ) %>%
     knitr::kable() %>%
     kableExtra::kable_styling(bootstrap_options = "condensed", font_size = 12)
@@ -121,15 +121,15 @@ aafractions.ncc::lu_aac_icd10 %>%
 ```
 The tables are split by condition and are truncated to show the first 12 icd10 codes.
 
-### Versions
+### versions
 
 The alcohol attributable fractions have been revised over time.  Both the conditions and their definitions along with their attributable fractions can differ between versions.  The versions are retained for historic interest and those available are shown in the table below.
 
-##### Table: Alcohol Attributable Versions of Conditions and Fractions
+##### Table: Alcohol Attributable versions of Conditions and Fractions
 ```{r echo = FALSE}
 aafractions.ncc::aa_fractions %>% 
-    select(Version) %>%
-    unique() %>% arrange(desc(Version)) %>%
+    select(version) %>%
+    unique() %>% arrange(desc(version)) %>%
     knitr::kable() %>%
     kableExtra::kable_styling(bootstrap_options = "condensed", font_size = 12)
 ```
@@ -214,7 +214,7 @@ tbl__AA__PHIT_IP__melt <- tbl__AA__PHIT_IP__melt %>%
     merge(
         lu_aac_icd10 %>%
             merge(
-                aa_versions %>% filter(Version == "aaf_2017_phe")
+                aa_versions %>% filter(version == "aaf_2017_phe")
                 , by = "condition_uid"
             )
         , by.x = "icd10", by.y = "icd10"
@@ -269,8 +269,8 @@ tbl__AA__PHIT_IP__melt <- ip %>%
     ) %>%
     merge(
         aa_fractions %>% filter(analysis_type == "morbidity")
-        , by.x = c("Version", "condition_uid", "AgeBand_AA", "GenderC")
-        , by.y = c("Version", "condition_uid", "aa_ageband", "sex")
+        , by.x = c("version", "condition_uid", "AgeBand_AA", "GenderC")
+        , by.y = c("version", "condition_uid", "aa_ageband", "sex")
         , all.x = TRUE, all.y = FALSE
     )
 
@@ -352,7 +352,7 @@ select_colorder <- function(x, tofront, toback = NULL, middle = TRUE) {
 }
 
 aa_methods %>%
-    select_colorder(c("method", "GRID"), "Version") %>%
+    select_colorder(c("method", "GRID"), "version") %>%
     split(.$method) %>%
     lapply(sample_n, 6) %>%
     lapply(arrange_at, "GRID") %>%
