--- a/vignettes/counting_aa_events.Rmd
+++ b/vignettes/counting_aa_events.Rmd
@@ -139,28 +139,36 @@ The latest version is that used by PHE as described in their 2017 guidance is de
 
 # Method
 
+## Event records
+
 The underlying events table is a dummy HES inpatients table.  Only fields relevant to this analysis are presented.
 
 ```{r}
 library("aafractions.ncc")
 
 ip <- aafractions.ncc:::create__dummy_hesip(n = 1024)
+
 glimpse(ip)
 ```
 
-Some analysis decisions to make about reducing the problem space but still getting the job done.
-
-The first problem is to consider how to process the diagnosis fields.  This approach splits the concatenated diagnoses field into individual diagnosis codes.  This is an expensive resource operation but only needs to be done once.
-
 The problem space can be reduced as only a subset of events/records are relevant to the analysis, namely those satisfying all of:
 
-* First admission episodes 
-* Finished Consultant Episodes
-* Ordinary Admissions, Day Cases, and Mother and Babies (excluded are regular routine admissions, possibly)
+* Finished Admission Episodes
+    * First admission episodes 
+    * Finished Consultant Episodes
+    * Ordinary Admissions, Day Cases, and Mother and Babies (excluded are regular routine admissions, possibly)
 
+## Diagnosis to Risk Factor Attributable Condition
+
+The first problem is to consider how to process the diagnosis fields.  This approach splits the concatenated diagnoses field into individual diagnosis codes.  This is a technically resource expensive operation but only needs to be done once.
+
+Some analysis decisions to make about reducing the problem space but still getting the job done.
 
 ```{r}
 tbl__AA__PHIT_IP__melt <- ip %>%
+    #
+    # Filter for FAE
+    #
     filter(
         Consultant_Episode_Number == 1
         , Episode_Status == 3
@@ -170,6 +178,9 @@ tbl__AA__PHIT_IP__melt <- ip %>%
         GRID = Generated_Record_Identifier
         , Diag_Concat_adj = Diagnosis_ICD_Concatenated_D
     ) %>%
+    #
+    # Split concatenated field into indiviudal rows
+    #
     split(.$GRID) %>%
     purrr::map_dfr(function(x) {
         these_codes <- strsplit(x$Diag_Concat_adj, ";")
@@ -270,6 +281,9 @@ tbl__AA__PHIT_IP__melt <- ip %>%
         , by = "GRID"
         , all.x = TRUE, all.y = FALSE
     ) %>%
+    #
+    # Bring in the fractions
+    #
     merge(
         aafractions.ncc::aa_fractions %>% filter(analysis_type == "morbidity")
         , by.x = c("version", "condition_uid", "AgeBand_AA", "GenderC")
@@ -292,17 +306,15 @@ tbl__AA__PHIT_IP__melt %>%
 
 ```
 
-So every record with an alcohol attributable condition has now been assigned an attributable fraction.  Note that one record can have multiple alcohol attributable conditions.  The next stage concerns how to count all these the attributable fractions sensibly.
+## Counting attributable events
+
+Every record with an alcohol attributable condition has now been assigned an attributable fraction.  Note that one record can have multiple alcohol attributable conditions.  The next stage concerns how to count all these the attributable fractions sensibly.
 
 There are a number of methods PHE use in producing their statistics all based on determining one alcohol attributable condition for each event but differing in how that condition is selected.
 
-**alcohol-related (broad)** considers all alcohol attributable conditions and selects the condition with the highest attributable fraction value.
-
-**alcohol-specific** considers only alcohol attributable conditions that are specific to alcohol i.e. having an attributable fraction equal to one.
-
-**alcohol-related (narrow)** considers any alcohol attributable condition with a diagnosis code only in the first position and only external cause conditions occurring in any other diagnosis position.  Of these the condition with the highest attributable fraction value is selected.
-
 For all methods ties are broken by the position of the corresponding diagnosis code (earlier positions preferred over later positions).
+
+**alcohol-related (broad)** considers all alcohol attributable conditions and selects the condition with the highest attributable fraction value.
 
 ```{r}
 methods__broad <- tbl__AA__PHIT_IP__melt %>%
@@ -312,7 +324,23 @@ methods__broad <- tbl__AA__PHIT_IP__melt %>%
     ungroup() %>%
     filter(aa_rank_1_highest == 1) %>%
     mutate(method = "alcohol-related (broad)")
+```
 
+**alcohol-specific** considers only alcohol attributable conditions that are specific to alcohol i.e. having an attributable fraction equal to one.
+
+```{r}
+methods__specific <- tbl__AA__PHIT_IP__melt %>%
+    filter(aaf > 0.99) %>%
+    group_by(GRID) %>%
+    mutate(aa_rank_1_highest = order(order(desc(aaf), pos))) %>%
+    ungroup() %>%
+    filter(aa_rank_1_highest == 1) %>%
+    mutate(method = "alcohol-specific")
+```
+
+**alcohol-related (narrow)** considers any alcohol attributable condition with a diagnosis code only in the first position and only external cause conditions occurring in any other diagnosis position.  Of these the condition with the highest attributable fraction value is selected.
+
+```{r}
 methods__narrow <- tbl__AA__PHIT_IP__melt %>%
     filter(
         (aaf > 0)
@@ -323,15 +351,11 @@ methods__narrow <- tbl__AA__PHIT_IP__melt %>%
     ungroup() %>%
     filter(aa_rank_1_highest == 1) %>%
     mutate(method = "alcohol-related (narrow)")
+```
 
-methods__specific <- tbl__AA__PHIT_IP__melt %>%
-    filter(aaf > 0.99) %>%
-    group_by(GRID) %>%
-    mutate(aa_rank_1_highest = order(order(desc(aaf), pos))) %>%
-    ungroup() %>%
-    filter(aa_rank_1_highest == 1) %>%
-    mutate(method = "alcohol-specific")
+Events related with alcohol attributable conditions may be included in one or more methods and if so, and there are multiple alcohol attributable conditions within the event record, may be included based on different alcohol attributable conditions.
 
+```{r}
 aa_methods <- bind_rows(
     methods__broad
     , methods__narrow
@@ -339,7 +363,6 @@ aa_methods <- bind_rows(
 ) %>% select(-aa_rank_1_highest)
 
 glimpse(aa_methods)
-
 ```
 
 ```{r results = "asis"}
